--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,21 +8,23 @@ services:
       POSTGRES_HOST_AUTH_METHOD: trust
     image: 'postgres:11-alpine'
     restart: always
+    ports: 
+      - 5432:5432
     volumes:
       - 'pgdata:/var/lib/postgresql/data'
-  web:
-    build:
-      context: .
-      dockerfile: 'docker/Dockerfile.dev'
-    depends_on:
-      - db
-    environment:
-      MIX_ENV: dev
-    # env_file:
-    #   - .env
-    ports:
-      - '4000:4000'
-    volumes:
-      - .:/app
+  # web:
+  #   build:
+  #     context: .
+  #     dockerfile: 'docker/Dockerfile.dev'
+  #   depends_on:
+  #     - db
+  #   environment:
+  #     MIX_ENV: dev
+  #   # env_file:
+  #   #   - .env
+  #   ports:
+  #     - '4000:4000'
+  #   volumes:
+  #     - .:/app
 volumes:
   pgdata:
